# youtube-project-manager-development

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.md  README.md  package-lock.json  package.json
apps/desktop/: index.html  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/ytpm-cli/: Cargo.toml
crates/ytpm-cli/src/: main.rs
crates/ytpm-core/: Cargo.toml
crates/ytpm-core/src/: asset_service.rs  document_service.rs  error.rs  filter_graph.rs  folder_template.rs  index.rs  job_service.rs  lib.rs  media_service.rs  migration.rs  model.rs  project_service.rs  publish_service.rs  subtitle_service.rs  task_service.rs  timeline_service.rs
crates/ytpm-core/tests/: asset_service.rs  document_service.rs  index_service.rs  journal_recovery.rs  media_service.rs  project_service.rs  publish_service.rs  task_service.rs  timeline_service.rs
docs/: 00-overview.md  01-product-requirements.md  02-user-flows.md  03-ui-design.md  04-information-architecture.md  05-system-architecture.md  06-data-model.md  07-folder-spec.md  08-command-api.md  09-security-and-safety.md  10-backup-recovery.md  11-accessibility.md  12-error-handling.md  13-release-packaging.md  14-ai-agent-integration.md  15-roadmap.md  16-development-environment.md  17-media-pipeline.md  18-youtube-publishing.md  19-installation.md
migrations/: 0001_init.sql  0002_search.sql  0003_runtime_index.sql  0004_timeline.sql
planning/: acceptance-criteria.md  decision-log.md  design.md  final.md  nle-v1-blueprint.md  plan.md  risk-register.md  spec.md  test.md  todos.md  ui-design.md  ui-verification.md
schemas/: assets.schema.json  project.schema.json  tasks.schema.json  timeline.schema.json
scripts/: bootstrap.ps1  build.ps1  dev.ps1  installer-smoke.ps1  release-checks.ps1  smoke-cli.ps1  smoke-junction.ps1  test.ps1
(+33 files in other folders)
