[package]
name = "ytpm-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "ytpm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { package = "tauri-plugin-dialog", version = "2" }
ytpm-core = { path = "../../../crates/ytpm-core" }
